# hh_vacancies_database

./: DBManager.py  README.md  api.py  companies.json  config.py  database.ini  exceptions.py  main.py  pyproject.toml  utils.py
