[tool.poetry]
name = "hh-vacancies-database"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "ù"
readme = "README.md"
packages = [{include = "hh_vacancies_database"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.104.0"
psycopg2 = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
